fix: dynamically load CORS allowed origins from environment